syntax = "proto3";

option csharp_namespace = "DemoApi.GrpcService.Protos";

package sensor;

import "google/protobuf/timestamp.proto";

// The sensor service for streaming telemetry data - demonstrates gRPC streaming
service SensorService {
  // Unary call: Get current telemetry for a vehicle
  rpc GetCurrentTelemetry (VehicleRequest) returns (TelemetryData);

  // Server streaming: Stream telemetry data for a vehicle
  rpc StreamTelemetry (VehicleRequest) returns (stream TelemetryData);

  // Client streaming: Send batch of telemetry readings
  rpc SendTelemetryBatch (stream TelemetryData) returns (BatchResult);

  // Bidirectional streaming: Real-time telemetry exchange
  rpc TelemetryExchange (stream TelemetryData) returns (stream TelemetryData);

  // Get vehicle location history
  rpc GetLocationHistory (LocationHistoryRequest) returns (stream LocationData);
}

// Request for vehicle-specific operations
message VehicleRequest {
  string vehicle_id = 1;
  int32 interval_ms = 2; // Interval for streaming updates
}

// Request for location history
message LocationHistoryRequest {
  string vehicle_id = 1;
  google.protobuf.Timestamp start_time = 2;
  google.protobuf.Timestamp end_time = 3;
}

// Telemetry data from sensors
message TelemetryData {
  string id = 1;
  string vehicle_id = 2;
  string device_id = 3;
  TelemetryType type = 4;
  double value = 5;
  string unit = 6;
  google.protobuf.Timestamp timestamp = 7;
}

// Location data
message LocationData {
  string vehicle_id = 1;
  double latitude = 2;
  double longitude = 3;
  double speed = 4;
  double heading = 5;
  google.protobuf.Timestamp timestamp = 6;
}

// Result of batch operations
message BatchResult {
  int32 received_count = 1;
  int32 processed_count = 2;
  bool success = 3;
  string message = 4;
}

// Enum for telemetry types
enum TelemetryType {
  TELEMETRY_TYPE_UNSPECIFIED = 0;
  TELEMETRY_TYPE_LOCATION = 1;
  TELEMETRY_TYPE_SPEED = 2;
  TELEMETRY_TYPE_FUEL_LEVEL = 3;
  TELEMETRY_TYPE_ENGINE_TEMPERATURE = 4;
  TELEMETRY_TYPE_BATTERY_VOLTAGE = 5;
  TELEMETRY_TYPE_ODOMETER = 6;
}
